deploy/demo-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-project
  labels:
    app: spring-boot-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-project
  template:
    metadata:
      name: spring-boot-project
      labels:
        app: spring-boot-project
    spec:
      containers:
      - image: acrsharesvcnonprodeas01.azurecr.io/demo-cicd/spring-boot-project
        name: spring-boot-project
        ports:
        - containerPort: 8761
          name: web
          protocol: TCP
